# f_macro_optimization

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_DV_estimation.py  run_V_PR_estimation.py  setup.cfg
data/: ESPGameNN.txt  Example.txt
data/grids/: result_ESPGameNN_1000_10x10.txt  result_ESPGameNN_1000_2x2.txt  result_ESPGameNN_1000_3x3.txt  result_ESPGameNN_1000_4x4.txt  result_ESPGameNN_1000_6x6.txt  result_ESPGameNN_1000_9x9.txt
data/hulls/: result_ESPGameNN_1000_20.txt
src/: classes.py  convex_hull.py  estimation.py  io.py  load.py  metrics.py
tests/: test_DV.py  test_grid.py  test_load.py  test_metrics.py
