[tool.poetry]
name = "f_macro_optimization"
version = "0.1.0"
description = ""
authors = ["Anna Berger <anna.ig.berger@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.20.1"
tqdm = "^4.59.0"
numba = "^0.52.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "3.8.3"
flake8-bugbear = "20.1.4"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.2.3"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
flake8-tidy-imports = "4.1.0"
pre-commit = "^2.10.1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
